...
                        android:id="@+id/user_profile_cancel_btn"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_size_large"
                        android:layout_weight="2"
                        android:text="@string/user_profile_cancel_update_btn"
                        android:textAppearance="@style/AppCommerce.TextAppearance.Button"
                        android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/user_profile_save_or_update_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/user_profile_start_update_btn"
                        android:textAppearance="@style/AppCommerce.TextAppearance.Button"
                        android:textColor="@color/white_100"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
...
