<resources>

    <string name="app_name" translatable="false">E-Commerce</string>

    <!--Fragments Names-->
    <string name="fragment_products_label" translatable="false">@string/app_name</string>
    <string name="fragment_product_detail_label" translatable="false">@string/app_name</string>
    <string name="fragment_login_label">Log In</string>
    <string name="fragment_profile_label">Profile</string>
    <string name="fragment_register_label">Register</string>
    <string name="fragment_categories_label">Categories</string>
    <string name="fragment_orders_label">My Orders</string>
    <string name="fragment_cart_label">Cart</string>
    <string name="fragment_favorites_label">My favorites</string>
    <string name="fragment_picture_chooser_dialog_label" translatable="false">Picture Chooser Dialog</string>

    <!--Drawer Menu Options-->
    <string name="menu_title_login">Login</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_favorites">Favorites</string>
    <string name="menu_title_categories">Categories</string>
    <string name="menu_title_my_orders">My Orders</string>
    <string name="menu_title_cart">Cart</string>
    <string name="menu_title_logout">Logout</string>

    <!--Place Holders-->
    <string name="place_holder_text_no_favorites">You have no favorites</string>
    <string name="place_holder_text_no_products_in_cart">Your cart is empty</string>
    <string name="place_holder_text_no_orders">You have no purchases</string>

    <!--Hints-->
    <string name="hint_name_first_name">First Name</string>
    <string name="hint_name_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_number">Number</string>
    <string name="hint_address_street">Street</string>
    <string name="hint_address_zipcode">Zipcode</string>

    <!--Errors-->
    <string name="error_no_connection">No Internet connection</string>
    <string name="error_no_email">Type your email</string>
    <string name="error_no_username">Type your username</string>
    <string name="error_no_password">Type your password</string>
    <string name="error_already_favorite">Product already added to your favorites</string>
    <string name="error_no_color_selected">Select a color</string>
    <string name="error_no_size_selected">Select a size</string>
    <string name="error_no_color_and_size_selected">Select a color and a size</string>

    <!--Login Fragment-->
    <string name="login_btn">Login</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_success_message">Welcome %1s</string>
    <string name="login_failure_message">User does not exist</string>

    <!--Register Fragment-->
    <string name="register_btn">Register</string>
    <string name="register_success_message">Account successfully created - not actually</string>

    <!--Profile Fragment-->
    <string name="profile_updated_message">Profile updated</string>
    <string name="profile_start_update_btn">Update profile</string>
    <string name="profile_cancel_update_btn">Cancel</string>
    <string name="profile_save_update_btn">Save</string>
    <string name="profile_logout_btn">Logout</string>
    <string name="profile_dialog_title">Select a picture from:</string>
    <string name="profile_dialog_option_gallery">Gallery</string>
    <string name="profile_dialog_option_camera">Camera</string>

    <!--Categories Fragment-->
    <string name="category_name_all_products">All Products</string>
    <string name="category_name_jewelery">Jewelery</string>
    <string name="category_name_electronics">Electronics</string>
    <string name="category_name_mens_clothing">Men\'s clothing</string>
    <string name="category_name_women_s_clothing">Women\'s clothing</string>

    <!--Product Detail Fragment-->
    <string name="product_detail_buy_now">Buy now</string>
    <string name="product_detail_thanks_for_purchase">Thanks for your purchase</string>
    <string name="product_detail_available_colors">Select color</string>
    <string name="product_detail_available_sizes">Size</string>
    <string name="product_detail_chip_size_1" translatable="false">P</string>
    <string name="product_detail_chip_size_2" translatable="false">M</string>
    <string name="product_detail_chip_size_3" translatable="false">G</string>
    <string name="product_detail_chip_size_4" translatable="false">GG</string>

    <!--Cart Fragment-->
    <string name="cart_total_price">Total: %1s</string>
    <string name="cart_confirm_purchase_btn">Confirm</string>
    <string name="cart_cancel_purchase_btn">Cancel</string>
    <string name="cart_dialog_title">Abandon Cart?</string>
    <string name="cart_dialog_positive">Yes</string>
    <string name="cart_dialog_negative">No</string>

    <!--Order Fragment-->
    <string name="order_item_id">Order Id: %1s</string>
    <string name="order_item_date">Date: %1s</string>
    <string name="order_item_products">Products: %1s</string>
    <string name="order_item_total_price">Total: %1s</string>

    <!--Content Description-->
    <string name="content_desc_add_to_favorites_btn">Add to favorites</string>
    <string name="content_desc_add_to_cart_btn">Add to cart</string>
    <string name="content_desc_buy_now">Buy now</string>

    <string name="content_desc_remove_from_favorites_btn">Remove product from favorites</string>

    <string name="content_desc_product_detail_name">Product picture</string>
    <string name="content_desc_item_cart_increase_btn">Increase product quantity</string>
    <string name="content_desc_item_cart_decrease_btn">Decrease product quantity</string>

    <string name="content_desc_update_profile_pic_btn">Update your profile picture</string>
    <string name="content_desc_get_picture_from_gallery_btn">Get a picture from your gallery</string>
    <string name="content_desc_get_picture_from_camera_btn">Take a picture</string>

</resources>